--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -21,11 +21,11 @@
     </div>
     <div class="row text-center" style="margin-top:20px">
       <ul class="pagination">
-        <li th:if="${startPage>1}"><a th:href="@{/(page=${startPage-1})}">&laquo;</a></li>
+        <li th:if="${startPage>1}"><a th:href="@{/main(page=${startPage-1})}">&laquo;</a></li>
         <li th:class="${curpage==i?'active':''}" th:each="i:${#numbers.sequence(startPage,endPage)}">
-          <a th:href="@{/(page=${i})}" th:text="${i}"></a>
+          <a th:href="@{/main(page=${i})}" th:text="${i}"></a>
         </li>
-        <li th:if="${endPage<totalpage}"><a th:href="@{/(page=${endPage+1})}">&raquo;</a></li>
+        <li th:if="${endPage<totalpage}"><a th:href="@{/main(page=${endPage+1})}">&raquo;</a></li>
       </ul>
     </div>
   </div>
