--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -8,11 +8,11 @@
 	<nav class="navbar navbar-inverse">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="/">CI/CD</a>
+	      <a class="navbar-brand" href="/main">CI/CD</a>
 	    </div>
 	    <ul class="nav navbar-nav">
-	      <li class="active"><a href="/">Home</a></li>
-	      <li><a href="/find">맛집 검색</a></li>
+	      <li class="active"><a href="/main">Home</a></li>
+	      <li><a href="/food/find">맛집 검색</a></li>
 	      <li><a href="/board/list">게시판</a></li>
 	    </ul>
 	  </div>
