--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -8,6 +8,7 @@
 <body>
   <div class="container">
     <div class="row">
+      <h3 class="text-center">서울 맛집 목록</h3>
       <div class="col-md-3" th:each="vo:${list}">
         <div class="thumbnail">
           <a th:href="@{'/detail?fno='+${vo.fno}}">
